--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,13 @@
 {
     "require": {
         "sonata-project/google-authenticator": "^2.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\Controllers\\": "app/controllers/",
+            "App\\Controllers\\User\\": "app/controllers/user/"
+        }
     }
 }
+
+
